Moved definition of ValuationResult to api.yml
